--- a/assets/templates/root.html
+++ b/assets/templates/root.html
@@ -103,17 +103,17 @@
                 jqtest: $root.tags["offer-jqtest"],
                 votes: $root.tags["offer-votes"]
             },
-            // overview: {
-            //     premium: $root.tags["overview-premium"],
-            //     jqtest: $root.tags["overview-jqtest"],
-            //     functions: $root.tags["overview-functions"]
-            // },
-            // jqtest: {
-            //     section: $root.tags["section-jqtest"],
-            //     list: $root.tags["section-jqtest"].tags["jqtest-list"],
-            //     test: $root.tags["section-jqtest"].tags["jqtest-content"],
-            //     result: $root.tags["section-jqtest"].tags["jqtest-result"]
-            // },
+            overview: {
+                premium: $root.tags["overview-premium"],
+                jqtest: $root.tags["overview-jqtest"],
+                functions: $root.tags["overview-functions"]
+            },
+            jqtest: {
+                section: $root.tags["section-jqtest"],
+                list: $root.tags["section-jqtest"].tags["jqtest-list"],
+                test: $root.tags["section-jqtest"].tags["jqtest-content"],
+                result: $root.tags["section-jqtest"].tags["jqtest-result"]
+            },
             plan: $root.tags["section-plan"],
             inbox: {
                 section: $root.tags["section-inbox"]
