--- a/views/private.html
+++ b/views/private.html
@@ -43,124 +43,11 @@
     <script src="/assets/templates/root.html" type="riot/tag"></script>
     <script src="/assets/templates/root-mobile.html" type="riot/tag"></script>
 
-    <!--/ Section resume /-->
-    <script src="/assets/templates/sections/list/resumeNavbar.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/resumeList.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/resumeItem.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/resumeItemNew.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/resumeItemBlank.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/resumeSelect.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/resumeSendmail.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/buttonStat.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/svgStat.html" type="riot/tag"></script>
-
-    <!--/ Section resume (mobile) /-->
-    <script src="/assets/templates/sections/list/mobile/resumeList.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/mobile/resumeItem.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/mobile/resumeItemBlank.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/mobile/navbar.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/list/mobile/resumeSection.html" type="riot/tag"></script>
-
     <!--/ Section create basic resume /-->
-    <script src="/assets/templates/appResume/basic/section.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/section-content.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/commons/ui/buttonSave.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/commons/sections/finish.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/sections/preview.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/sections/percentage.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/sections/buttons.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/sections/steps.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/sections/menu.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/sections/settings.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/sections/screens.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/components/commons.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/components/education.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/components/educationItem.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/components/languages.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/components/jobs.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/components/jobsItem.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/components/about.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/templates/template1.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/templates/template2.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/templates/template3.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/templates/template4.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/templates/template5.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/templates/template6.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/templates/template7.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/templates/template8.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/basic/templates/template9.html" type="riot/tag"></script>
-
-    <!--/ Offers /-->
-    <script src="/assets/templates/sections/offers/welcome.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/offers/plan.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/offers/votes.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/offers/jqtest.html" type="riot/tag"></script>
-
-    <!--/ Overview /-->
-    <!-- <script src="/assets/templates/sections/overview/premium/overviewPremium.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/overview/premium/overviewPremiumContent.tag" type="riot/tag"></script>
-    <script src="/assets/templates/sections/overview/jqtest/overviewJqtest.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/overview/jqtest/overviewJqtestContent.tag" type="riot/tag"></script>
-    <script src="/assets/templates/sections/overview/overviewFunctions.html" type="riot/tag"></script> -->
-
-    <!--/ Profile /-->
-    <script src="/assets/templates/sections/profile/profile.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/profile/profileData.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/profile/profileDataContent.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/profile/popupReferer.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/profile/mobile/profile.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/profile/mobile/profileData.html" type="riot/tag"></script>
-
-    <!--/ Payment /-->
-    <script src="/assets/templates/sections/plan/plan.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/plan/mobile/plan.html" type="riot/tag"></script>
-
-    <!--/ Inbox /-->
-    <script src="/assets/templates/sections/inbox/inbox.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/inbox/inboxList.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/inbox/inboxListBlank.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/inbox/inboxContent.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/inbox/inboxOffer.html" type="riot/tag"></script>
-
-    <!--/ Inbox (mobile) /-->
-    <script src="/assets/templates/sections/inbox/mobile/inbox.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/inbox/mobile/inboxContent.html" type="riot/tag"></script>
-
-    <!--/ Likes /-->
-    <script src="/assets/templates/sections/likes/mobile/likes.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/likes/likesList.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/likes/likesOffer.html" type="riot/tag"></script>
-
-    <!--/ Payment /-->
-    <script src="/assets/templates/sections/payment/payment.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/payment/paymentForm.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/payment/mobile/payment.html" type="riot/tag"></script>
-
-    <!--/ JQ-test /-->
-    <!-- <script src="/assets/templates/sections/jqtest/jqtest.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/jqtest-enter.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/jqtest-enter-content.tag" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/jqtest-content.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/jqtest-result.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/jqtest-result-content.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-columns.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-orientation.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-stimulus.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-humps.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-graph.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-specialties.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-notengage.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-strengths.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-weaksides.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-development.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-personality.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-finish.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/jqtest-result-text.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/mobile/jqtest-result-skills.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/jqtest/result/mobile/jqtest-result-orientation.html" type="riot/tag"></script> -->
+    <script src="/assets/js/templates.resume.js"></script>
 
     <!--/ Modules /-->
-    <script src="/assets/templates/modules/alert.html" type="riot/tag"></script>
+    <!-- <script src="/assets/templates/modules/alert.html" type="riot/tag"></script>
     <script src="/assets/templates/modules/tutorial.html" type="riot/tag"></script>
     <script src="/assets/templates/modules/loader.html" type="riot/tag"></script>
     <script src="/assets/templates/modules/loaderAjax.html" type="riot/tag"></script>
@@ -171,14 +58,8 @@
     <script src="/assets/templates/modules/oScreenLoader.html" type="riot/tag"></script>
     <script src="/assets/templates/modules/oScreenProgress.html" type="riot/tag"></script>
     <script src="/assets/templates/modules/oScreenPointer.html" type="riot/tag"></script>
-    <script src="/assets/templates/modules/photoUpload.html" type="riot/tag"></script>
-
-    <!--/ Section resumeStat /-->
-    <script src="/assets/templates/sections/stat/resumeStat.html" type="riot/tag"></script>
-    <script src="/assets/templates/sections/stat/resumeStatOffer.html" type="riot/tag"></script>
-
-    <!--/ Section resumeStat (mobile) /-->
-    <script src="/assets/templates/sections/stat/mobile/resumeStat.html" type="riot/tag"></script>
+    <script src="/assets/templates/modules/photoUpload.html" type="riot/tag"></script> -->
+    <script src="/assets/js/templates.modules.js"></script>
 
     <!--/ UI elements /-->
     <!-- <script src="/assets/templates/ui/input.html" type="riot/tag"></script>
@@ -218,6 +99,8 @@
     <script src="/assets/templates/ui/icons/social/icon-dk.tag" type="riot/tag"></script>
     <script src="/assets/templates/ui/icons/social/icon-gl.tag" type="riot/tag"></script> -->
     <script src="/assets/js/templates.ui.js"></script>
+    <script src="/assets/js/templates.sections.js"></script>
+    <script src="/assets/templates/sections/offers/welcome.html" type="riot/tag"></script>
 
     <!--/ JS components (commons) /-->
     <!-- <script src="/assets/js/components/commons/app.js"></script>
@@ -234,6 +117,8 @@
     <script src="/assets/js/components/i18n/resume/basic/template/ru.js"></script> -->
     <script src="/assets/js/commons.js"></script>
     <script src="/assets/js/components/fetch.js"></script>
+    <script src="/assets/js/components/tutorial/welcome.js"></script>
+    <script src="/assets/js/components/tutorial/resume/free/interface.js"></script>
 
     <!--/ JS components (plugins) /-->
     <!-- <script src="/assets/js/plugins/chartRadial.js"></script>
@@ -253,6 +138,7 @@
     <script src="/assets/js/plugins/tutorial/welcome.js"></script>
     <script src="/assets/js/plugins/tutorial/resumeFree.js"></script> -->
     <script src="/assets/js/plugins.js"></script>
+    <script src="/assets/js/plugins/sections.js"></script>
 
     <!--/ JS components (store) /-->
     <script src="/assets/js/store/account.js"></script>
