--- a/assets/templates/appResume/basic/templates/template1.html
+++ b/assets/templates/appResume/basic/templates/template1.html
@@ -120,6 +120,17 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Avant';
+  src: url('/assets/css/appResume/basic/templates/template1/fonts/avantgardectt-boldallfontru.eot'); /* IE9 Compat Modes */
+  src: url('/assets/css/appResume/basic/templates/template1/fonts/avantgardectt-boldallfontru.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('/assets/css/appResume/basic/templates/template1/fonts/avantgardectt-boldallfontru.woff2') format('woff2'), /* Modern Browsers */
+    url('/assets/css/appResume/basic/templates/template1/fonts/avantgardectt-boldallfontru.woff') format('woff'), /* Modern Browsers */
+    url('/assets/css/appResume/basic/templates/template1/fonts/avantgardectt-boldallfontru.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('/assets/css/appResume/basic/templates/template1/fonts/avantgardectt-boldallfontru.svg') format('svg'); /* Legacy iOS */
+  font-weight: normal;
+  font-style: normal;
+}
 
 </style>
 
